# fastapi-boilerplate

./: .env.dev  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Makefile  README.md  gunicorn.conf.py  pyproject.toml  pyrightconfig.json
app/: main.py
app/api/dependencies/: auth.py  home.py
app/api/models/: ask.py  registry.py  user.py
app/api/routers/: ask.py  auth.py  home.py  registry.py
app/api/schemas/: error.py  response.py
app/configs/: constants.py  gemini.py  lifespan.py  logger.py  logging.py  settings.py
app/configs/ai/: llm.py
app/configs/exceptions/: api_error.py  decorators.py  error_handler.py
app/database/: lifespan.py  mongo.py  mongodb.py  mongodb_saver.py  redis_saver.py  sqlite_saver.py
app/dependencies/: ask.py
app/services/: ask.py  auth.py  home.py
app/utils/: error.py  response.py
app/workflows/: test.py
app/workflows/graphs/: graph.py
app/workflows/nodes/: ask.py
app/workflows/schemas/: ask.py
