[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["test", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
