[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "uvicorn[standard]>=0.38.0",
    "fastapi>=0.121.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "certifi>=2025.11.12",
    "pymongo>=4.15.4",
    "beanie>=2.0.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["test", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/routers/*.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
